--- a/interests.html
+++ b/interests.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Interests</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="personal-portfolio/src/components/styles.css">
 </head>
 <header>
     <nav>
@@ -23,12 +23,12 @@
                 <div class="interest">
                     <h2>Anime</h2>
                     <img src="https://ih1.redbubble.net/image.1190880636.7972/flat,750x,075,f-pad,750x1000,f8f8f8.u4.jpg" alt="A yellow and white car drifing on the title 'Initial D" class="responsive-img">
-                    <p>I enjoy a whole varity of anime, from old to new. From genre to genre I love it all.</p>
+                    <p>I enjoy a whole variety of anime, from old to new. From genre to genre I love it all.</p>
                 </div>
                 <div class="interest">
                     <h2>Cars</h2>
                     <img src="https://preview.redd.it/ynyrfqbc03n71.jpg?auto=webp&s=35fe7c69465512068c9085df2da4df5fe97ba408" alt="A yellow coupe" class="responsive-img">
-                    <p>Thanks to mostly anime, I've develop a love for cars and working on them as well. My favorite cars at the moment are a Mazda RX-7 type-R and a 1981 Chevrolet Camaro Z28</p>
+                    <p>Thanks to mostly anime, I've developed a love for cars and working on them as well. My favorite cars at the moment are a Mazda RX-7 type-R and a 1981 Chevrolet Camaro Z28</p>
                 </div>
             </section>
         </main>
