--- a/projects.html
+++ b/projects.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projects</title>
-    <link rel="stylesheet" href="personal-portfolio/src/components/styles.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <header>
     <nav>
@@ -22,20 +22,20 @@
                 <h1>Projects</h1>
                 <div class="project">
                     <h2>Favorite Recipe</h2>
-                    <img src="personal-portfolio/src/components/img/Screenshot%202024-06-04%20134201.png" alt="favorite recipe home page" class="responsive-img">
+                    <img src="cream.png" alt="favorite recipe home page" class="responsive-img">
                     <p>This was my favorite recipe project. Where I make a website to display my favorite food, the directions on how to do it, and the ingredients</p>
                     <a href="https://github.com/TylerJac/Favorite_recipe" target="_blank">View on GitHub</a>
                 </div>
                 <div class="project">
-                    <h2>CurrencyConverter</h2>
-                    <img src="personal-portfolio/src/components/img/Screenshot%202024-06-04%20132902.png" alt="React home page" class="responsive-img">
+                    <h2>Currency Converter</h2>
+                    <img src="CurrencyConverter.png" alt="React home page" class="responsive-img">
                     <p>This project was me creating a converter for different currency.</p>
                     <a href="https://github.com/TylerJac/Currency-Converter" target="_blank">View on GitHub</a>
                     <a href="https://main.d2zci9p2ack2ey.amplifyapp.com" target="_blank">AWS Link</a>
                 </div>
                 <div class="project">
                     <h2>Pokemon Project</h2>
-                    <img src="personal-portfolio/src/components/img/Screenshot%202024-06-04%20153717.png" alt="Flask Pokemon Database" class="responsive-img">
+                    <img src="poke.png" alt="Flask Pokemon Database" class="responsive-img">
                     <p>This was a collaborative Flask project I worked on with a man named Curtis. I mainly handled the styling of the project.</p>
                     <a href="https://github.com/TylerJac/PokemonProject" target="_blank">View on GitHub</a>
                 </div>
