--- a/projects.html
+++ b/projects.html
@@ -28,7 +28,7 @@
                 </div>
                 <div class="project">
                     <h2>Currency Converter</h2>
-                    <img src="CurrencyConverter.png" alt="React home page" class="responsive-img">
+                    <img src="CurrencyConverter.png" alt="Currency Converter page" class="responsive-img">
                     <p>This project was me creating a converter for different currency.</p>
                     <a href="https://github.com/TylerJac/Currency-Converter" target="_blank">View on GitHub</a>
                     <a href="https://main.d2zci9p2ack2ey.amplifyapp.com" target="_blank">AWS Link</a>
