changes some projects

--- a/projects.html
+++ b/projects.html
@@ -22,9 +22,10 @@
                 <h1>Projects</h1>
                 <div class="project">
                     <h2>Favorite Recipe</h2>
-                    <img src="cream.png" alt="favorite recipe home page" class="responsive-img">
-                    <p>This was my favorite recipe project. Where I make a website to display my favorite food, the directions on how to do it, and the ingredients</p>
-                    <a href="https://github.com/TylerJac/Favorite_recipe" target="_blank">View on GitHub</a>
+                    <img src="cream.png" alt="Casino homepage" class="responsive-img">
+                    <p>This is a project on helping those with addiction problem by giving them a place to get the same
+                        rushes without spending money. I worked in a group of two others to make this project.</p>
+                    <a href="https://github.com/Wassword/Casino" target="_blank">View on GitHub</a>
                 </div>
                 <div class="project">
                     <h2>Currency Converter</h2>
