changed contact stuff

--- a/projects.html
+++ b/projects.html
@@ -43,7 +43,11 @@
             </section>
         </main>
         <footer>
-            <a href="contact.html">Contact me</a>
+            <ul>
+                <li><a href="https://github.com/TylerJac">GitHib</a></li>
+                <li><a href="https://www.linkedin.com/in/tyler-jackson-9072a5337/">Linkedin</a></li>
+                <li>Email: tylerajackson76@gmail.com</li>
+            </ul>
             <p>&copy; 2024 Tyler Jackson</p>
         </footer>
     </div>
