--- a/index.html
+++ b/index.html
@@ -28,7 +28,11 @@
         </main>
     </div>
     <footer>
-        <a href="contact.html">Contact me</a>
+        <ul>
+            <li><a href="https://github.com/TylerJac">GitHib</a></li>
+            <li><a href="https://www.linkedin.com/in/tyler-jackson-9072a5337/">Linkedin</a></li>
+            <li>Email: tylerajackson76@gmail.com</li>
+        </ul>
         <p>&copy; 2024 Tyler Jackson</p>
     </footer>
 </body>
