--- a/projects.html
+++ b/projects.html
@@ -21,7 +21,7 @@
             <section class="projects">
                 <h1>Projects</h1>
                 <div class="project">
-                    <h2>Favorite Recipe</h2>
+                    <h2>Casino</h2>
                     <img src="cream.png" alt="Casino homepage" class="responsive-img">
                     <p>This is a project on helping those with addiction problem by giving them a place to get the same
                         rushes without spending money. I worked in a group of two others to make this project.</p>
