--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </div>
     <footer>
         <ul>
-            <li><a href="https://github.com/TylerJac">GitHib</a></li>
+            <li><a href="https://github.com/TylerJac">GitHub</a></li>
             <li>Email: tylerajackson76@gmail.com</li>
             <li><a href="https://www.linkedin.com/in/tyler-jackson-9072a5337/">Linkedin</a></li>
         </ul>
