--- a/projects.html
+++ b/projects.html
@@ -44,7 +44,7 @@
         </main>
         <footer>
             <ul>
-                <li><a href="https://github.com/TylerJac">GitHib</a></li>
+                <li><a href="https://github.com/TylerJac">GitHub</a></li>
                 <li>Email: tylerajackson76@gmail.com</li>
                 <li><a href="https://www.linkedin.com/in/tyler-jackson-9072a5337/">Linkedin</a></li>
             </ul>
