--- a/projects.html
+++ b/projects.html
@@ -42,14 +42,36 @@
                 </div>
             </section>
         </main>
+    </div>
         <footer>
-            <ul>
+            <ul class="footer-links">
                 <li><a href="https://github.com/TylerJac">GitHub</a></li>
                 <li>Email: tylerajackson76@gmail.com</li>
                 <li><a href="https://www.linkedin.com/in/tyler-jackson-9072a5337/">Linkedin</a></li>
             </ul>
-            <p>&copy; 2024 Tyler Jackson</p>
+            <p>&copy; <span id="year"></span> Tyler Jackson. All rights reserved.</p>
         </footer>
-    </div>
+
+        <script>
+            document.getElementById("year").textContent = new Date().getFullYear().toString();
+        </script>
+
+    <script>
+        const projectCards = document.querySelectorAll(".project");
+
+        projectCards.forEach(card => {
+            card.addEventListener("mouseenter", () => {
+                card.style.transform = "scale(1.05)";
+                card.style.boxShadow = "0px 4px 12px rgba(0, 0, 0, 0.2)";
+            });
+
+            card.addEventListener("mouseleave", () => {
+                card.style.transform = "scale(1)";
+                card.style.boxShadow = "none";
+            });
+        });
+    </script>
 </body>
 </html>
+
+
