--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
         </header>
         <main>
             <section class="about">
-                <h1>About Me</h1>
+                <h1>Tyler Jackson</h1>
+                <h3>About Me</h3>
                 <p>Hello, my name is Tyler. I really enjoy coding, I have experience in Python and Java.
                    I really enjoy anime and playing video games. To name a few there's JoJo's Bizarre Adventure, Overlord, and Mashle.
                    I hope to become a back-end developer with full stack capabilities.</p>
