changed some pictures to gifs and made an about me

--- a/projects.html
+++ b/projects.html
@@ -10,8 +10,8 @@
     <nav>
         <ul>
             <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About me</a></li>
             <li><a href="projects.html">Projects</a></li>
-            <li><a href="interests.html">Interests</a></li>
         </ul>
     </nav>
 </header>
@@ -35,7 +35,7 @@
                     <a href="https://main.d2zci9p2ack2ey.amplifyapp.com" target="_blank">AWS Link</a>
                 </div>
                 <div class="project">
-                    <h2>Pokemon Project</h2>
+                    <h2>Pokémon Project</h2>
                     <img src="poke.png" alt="Flask Pokemon Database" class="responsive-img">
                     <p>This was a collaborative Flask project I worked on with a man named Curtis. I mainly handled the styling of the project.</p>
                     <a href="https://github.com/TylerJac/PokemonProject" target="_blank">View on GitHub</a>
