added credit to images

--- a/about.html
+++ b/about.html
@@ -33,6 +33,9 @@
             </p>
         </section>
         <img src= "https://i.pinimg.com/originals/f0/f0/d9/f0f0d932d6e39c7af5aa305cbd8da735.gif" alt="Coding" class="responsive-img">
+        <p class="credit">Image by<a href="https://www.pinterest.com/pin/programmer-day-porforever--313985405251921509/"
+                                      target="_blank" rel="noopener">Tibor Lantos</a></p>
+
     </main>
 </div>
 <footer>
