--- a/index.html
+++ b/index.html
@@ -25,7 +25,11 @@
                     Hope you enjoy looking over my portfolio!
                 </p>
             </section>
-            <img src= "https://i.pinimg.com/originals/6b/0d/25/6b0d259827024dba35415b085a40bf41.gif" alt="Coding" class="responsive-img">
+            <img src= "https://i.pinimg.com/originals/6b/0d/25/6b0d259827024dba35415b085a40bf41.gif"
+                 alt="looking at the sky" class="responsive-img">
+            <p class="credit">Image by<a href="https://es.pinterest.com/pin/787215209852715219/" target="_blank"
+                                          rel="noopener">CHETITO</a></p>
+
         </main>
     </div>
     <footer>
