--- a/projects.html
+++ b/projects.html
@@ -23,7 +23,7 @@
                 <br>
                 <div class="project">
                     <h2>Casino</h2>
-                    <img src="cream.png" alt="Casino homepage" class="responsive-img">
+                    <img src="casino.png" alt="Casino homepage" class="responsive-img">
                     <p>This is a project on helping those with addiction problem by giving them a place to get the same
                         rushes without spending money. I worked in a group of two others to make this project.</p>
                     <a href="https://github.com/Wassword/Casino" target="_blank">View on GitHub</a>
